rocon_app_utilities/tests/test_rapps/rapp/invalid_classification/invalid_implementation_ancestor3.rapp
#display: Talker
description: Default ros style talker tutorial
public_interface: rocon_apps/talker.interface
public_parameters: rocon_apps/talker.parameters
compatibility: rocon:/*
launch: rocon_apps/talker.launch
parent_name: rocon_apps/talker.rapp
